--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,7 @@ footer a:hover {
     top: 5px;
     left: 5px;
     font-size: 1.5rem;
+   text-decoration: none;
 }
 @media screen and (max-width: 1200px){
     .download-link {
