--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ footer a:hover {
    box-shadow: 0 0 20px #eee;
    border-radius: 10px;
    display: block;
+  text-decoration: none;
  }
 
  .btn:hover {
