--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ footer a:hover {
 /* RESUME
 ------------------------------------*/
 .resume header::before {
-    background: url(../images/fluid1.avif) ;
+    background: url(../images/bg-resume.jpeg) ;
     border-bottom-left-radius: 50px; /* Radius for the bottom-left corner */
   border-bottom-right-radius: 50px;
     background-size: cover;
