--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif; /* Clean, professional font */
     font-size: 1.5rem;
     line-height: 1.4;
+    text-align: justify;
 }
 h1, h2, h3 {
     font-family: 'Roboto', Arial, sans-serif; /* Use Roboto for headings */
